--- a/style.css
+++ b/style.css
@@ -6,18 +6,20 @@ body {
   background-color: ivory;
 }
 
-h1 {
+h1, h2 {
   font-family: Oswald, serif;
-}
-
-h2 {
-  font-family: Oswald, serif;
-}
-
-.image-and-text {
-  display: inline;
 }
 
 img {
   float: left;
+}
+
+.columns {
+  column-count: 3;
+  column-width: 300px;
+}
+
+ol {
+  column-count: 4;
+  list-style-type: none;
 }
